--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
 			<version>3.7</version>
 		</dependency>
 
+		<!-- https://vaadin.com/directory/component/vaadin-contextmenu# -->
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-context-menu</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
